# partner_office_bitrix24_telegram

./: .gitignore  README.md
detail_deal_for_partner/: README.md  partner_deal_detail_main.py  pyproject.toml
partner/: .env.example  README.md  architecture.md  main.py  process.mb  pyproject.toml  test_stats.py
partner/app/: __init__.py  config.py  logger.py
partner/app/bot/: __init__.py  handlers.py  keyboards.py
partner/app/db/: database.py
partner/app/middlewares/: database.py
partner/app/services/: models.py  stats.py
partner/app/utils/: helper.py  validators.py  workBitrix24.py
users/: .env.example  README.md  architecture.md  main.py  pyproject.toml
users/app/: __init__.py  config.py  logger.py
users/app/bot/: __init__.py  handlers.py  keyboards.py
users/app/config/: documents.json
users/app/db/: __init__.py  database.py
users/app/middlewares/: __init__.py  database.py
users/app/services/: __init__.py  models.py
users/app/utils/: __init__.py  validators.py  workBitrix24.py
utm_partner_binding/: README.md  architecture.md  bitrix_utils.py  main.py  pyproject.toml  utm_partner_main.py
